4 column in a row in gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -104,50 +104,8 @@
         <div class="container-fluid justify-center" style="margin-top:40px; padding-left: 10px;">
 
             <!-- <h2>SA High School Gallery</h2> -->
-
+            <!-- col-xs-6 col-sm-4 col-md-3 col-lg-3 -->
             <div class="demo-gallery">
-                <!-- <ul id="lightgallery" class="list-unstyled row">
-                    <div class="row">
-                        <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
-                            data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                            data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                            data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
-                            <a href="">
-                                <img class="img-responsive"
-                                    src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-1.jpg">
-                            </a>
-                        </li>
-                        <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
-                            data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                            data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                            data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                            <a href="">
-                                <img class="img-responsive"
-                                    src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-2.jpg">
-                            </a>
-                        </li>
-                        <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
-                            data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                            data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                            data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                            <a href="">
-                                <img class="img-responsive"
-                                    src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-13.jpg">
-                            </a>
-                        </li>
-                        <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
-                            data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                            data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                            data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                            <a href="">
-                                <img class="img-responsive"
-                                    src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-13.jpg">
-                            </a>
-                        </li>
-                    </div>
-
-                </ul> -->
-
                 <ul id="lightgallery" class="list-unstyled row">
                     <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
                         data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
@@ -221,25 +179,16 @@
                                 src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-4.jpg">
                         </a>
                     </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                        data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-2.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
+                    <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
                         data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
                         data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
+                        data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
                         <a href="">
                             <img class="img-responsive"
                                 src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-1.jpg">
                         </a>
                     </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
+                    <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
                         data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
                         data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
                         data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
@@ -248,7 +197,7 @@
                                 src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-2.jpg">
                         </a>
                     </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
+                    <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
                         data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
                         data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
                         data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
@@ -257,79 +206,19 @@
                                 src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-13.jpg">
                         </a>
                     </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
+                    <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3"
                         data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/4-1600.jpg"
                         data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/4-1600.jpg"
-                        data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
+                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
                         <a href="">
                             <img class="img-responsive"
                                 src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-4.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-1.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-2.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-13.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/4-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/4-1600.jpg"
-                        data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-4.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/1-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-1.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/2-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-2.jpg">
-                        </a>
-                    </li>
-                    <li class="col-xs-6 col-sm-4 col-md-2 col-lg-3"
-                        data-responsive="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                        data-src="https://sachinchoolur.github.io/lightgallery.js/static/img/13-1600.jpg"
-                        data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>">
-                        <a href="">
-                            <img class="img-responsive"
-                                src="https://sachinchoolur.github.io/lightgallery.js/static/img/thumb-13.jpg">
                         </a>
                     </li>
                 </ul>
+
+
+
             </div>
         </div>
 
